[package]
name = "safetensors_inspect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.3.0"
chrono = { version = "0.4.31", features = ["serde"] }
indexmap = { version = "2.1.0", features = ["serde"] }
owo-colors = "3.5.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
